--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <a href="./product.html"><img class="index" src="./img/PlayerIIModified Telecaster®SH.png" alt="Telecaster Negra Violeta mod"></a>
+                    <a href="./product2.html"><img class="index" src="./img/PlayerIIModified Telecaster®SH.png" alt="Telecaster Negra Violeta mod"></a>
                     <div class="home-product">
                         <h2>Player II Modified Telecaster® SH</h2>
                         <h3>Fender</h3>
