--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <a href="./product.html"><img class="index" src="./img/LimitedEditionAmericanProfessionalIIStratocaster®Thinline.png" alt="Telecaster Negra Violeta mod"></a>
+                    <a href="./product3.html"><img class="index" src="./img/LimitedEditionAmericanProfessionalIIStratocaster®Thinline.png" alt="Telecaster Negra Violeta mod"></a>
                     <div class="home-product">
                         <h2>Limited Edition American Professional II Stratocaster® Thinline</h2>
                         <h3>Fender</h3>
