--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <a href="./product.html"><img class="index" src="./img/ES-335FiguredCustomColor-DeepOcean Burst.png" alt="ES-335"></a>
+                    <a href="./product4.html"><img class="index" src="./img/ES-335FiguredCustomColor-DeepOcean Burst.png" alt="ES-335"></a>
                     <div class="home-product">
                         <h2>ES-335 Figured Custom Color - Deep Ocean Burst</h2>
                         <h3>Gibson</h3>
