--- a/product4.html
+++ b/product4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Player II Modified Telecaster® SH</title>
+    <title>ES-335 Figured Custom Color - Deep Ocean Burst</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -29,15 +29,15 @@
     </header>
     <main class="product">
         <section id="seccion-product" >
-            <h2 class="modelo">Player II Modified Telecaster® SH</h2>
-            <img clas="productimg" id="foto-product" src="./img/PlayerIIModified Telecaster®SH.png" alt="Stratocastor vintage 60s">
+            <h2 class="modelo">ES-335 Figured Custom Color - Deep Ocean Burst</h2>
+            <img clas="productimg" id="foto-product" src="./img/ES-335FiguredCustomColor-DeepOcean Burst.png" alt="Stratocastor vintage 60s">
             <article class="titulModelo">
                 <div class="titulModelo">
-                    <h3>Fender</h3>
-                    <h4>Telecaster</h4>
+                    <h3>Gibson</h3>
+                    <h4>ES-335</h4>
                 </div>
                 <div class="titulModelo">
-                    <h5>$1.000,00</h5>
+                    <h5>$4.200,00</h5>
                 </div>
                 <div class="mapita">
                     <h2>¡¡Veni a probarla!!</h2>
@@ -91,6 +91,6 @@
             <li>Marcos Bunge</li>
             <li>Victor Biazzin Rubinho</li>
         </ul>
-    </footer>   
+    </footer>    
 </body>
 </html>
