--- a/searchresults.html
+++ b/searchresults.html
@@ -39,7 +39,7 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <a href="./product.html"><img class="index" src="./img/PlayerIIModified Telecaster®SH.png" alt="Telecaster Negra Violeta mod"></a>
+                    <a href="./product2.html"><img class="index" src="./img/PlayerIIModified Telecaster®SH.png" alt="Telecaster Negra Violeta mod"></a>
                     <h2>Player II Modified Telecaster® SH</h2>
                     <h3>Fender</h3>
                     <h4>Telecaster</h4>
@@ -48,7 +48,7 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <a href="./product.html"><img class="index" src="./img/LimitedEditionAmericanProfessionalIIStratocaster®Thinline.png" alt="Telecaster Negra Violeta mod"></a>
+                    <a href="./product3.html"><img class="index" src="./img/LimitedEditionAmericanProfessionalIIStratocaster®Thinline.png" alt="Telecaster Negra Violeta mod"></a>
                     <h2>Limited Edition American Professional II Stratocaster® Thinline</h2>
                     <h3>Fender</h3>
                     <h4>Stratocaster</h4>
