--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     </div>
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
-                <h2 id="titulo-separacion">PRODUCTOS MÁS VENDIDOS</h2>
+                <h2 id="titulo-separacion2">PRODUCTOS MÁS VENDIDOS</h2>
                 <article>
                     <a href="./product.html"><img class="index" src="./img/ESSpecialSwapPRS.jpg.png" alt="Les paul junior Yellow tv"></a>
                     <div class="home-product">
