--- a/searchresults.html
+++ b/searchresults.html
@@ -56,6 +56,7 @@
                     <h5>$2.345,00</h5>
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
+    </section>
     <h3 class="resultados">No hay resultados</h3> 
     <footer>
         <ul>
