--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <h2>Stratocaster vintage 60s</h2>
                         <h3>Fender</h3>
                         <h4>Stratocaster</h4>
-                        <p>Inspirada en la década dorada del rock, esta Stratocaster captura el auténtico espíritu de los 60. Con pastillas de estilo vintage, mástil en C y tonos brillantes, ofrece un sonido versátil ideal para blues, surf y rock clásico. Su estética retro resalta con un acabado elegante y nostálgico.</p>
+                        <p>Representing the pinnacle of innovation and craftsmanship, Fender American Ultra Luxe sets the benchmark for premium electric instruments. The new American Ultra Luxe Vintage series takes it a step further, showcasing the finest of Fender heritage – where timeless classics meet uncompromising.</p>
                         <h5>$899,99</h5>
                     </div>
                     <a id="vermas" href="product.html">Ver +</a>
@@ -105,7 +105,7 @@
                         <h2>Player II Modified Telecaster® SH</h2>
                         <h3>Fender</h3>
                         <h4>Telecaster</h4>
-                        <p>La Player II Modified Telecaster® SH fusiona el diseño clásico Tele con mayor versatilidad. Con pastillas humbucker en el puente y single-coil en el mástil, ofrece desde limpios brillantes hasta sonidos potentes. Su mástil Modern “C” con 22 trastes y puente de seis selletas aseguran comodidad, afinación estable y un rango tonal ideal para diversos estilos.</p>
+                        <p>La Player II Modified Telecaster® SH fusiona el diseño clásico Tele con mayor versatilidad. Con pastillas humbucker en el puente y single-coil en el mástil, ofrece desde limpios brillantes hasta sonidos potentes. Su mástil Modern “C” con 22 trastes y puente de seis selletas aseguran comodidad, afinación estable.</p>
                         <h5>$1.000,00</h5>
                     </div>
                     <a id="vermas" href="product.html">Ver +</a>
@@ -113,10 +113,10 @@
                 <article>
                     <a href="./product3.html"><img class="index" src="./img/LimitedEditionAmericanProfessionalIIStratocaster®Thinline.png" alt="Telecaster Negra Violeta mod"></a>
                     <div class="home-product">
-                        <h2>Limited Edition American Professional II Stratocaster® Thinline</h2>
+                        <h2>Limited Edition American Stratocaster®</h2>
                         <h3>Fender</h3>
                         <h4>Stratocaster</h4>
-                        <p>La Limited Edition American Professional II Stratocaster® Thinline combina el diseño icónico Strat con cuerpo semi-hueco para mayor resonancia. Sus pastillas V-Mod II ofrecen tonos claros y dinámicos, mientras el mástil Deep “C” y 22 trastes proporcionan comodidad y precisión. Ideal para guitarristas que buscan versatilidad, sustain mejorado y un sonido Strat clásico con carácter moderno.</p>
+                        <p>La Limited Edition American Professional II Stratocaster® Thinline combina el diseño icónico Strat con cuerpo semi-hueco para mayor resonancia. Sus pastillas V-Mod II ofrecen tonos claros y dinámicos, mientras el mástil Deep “C”. y 22 trastes proporcionan comodidad y precisión.</p>
                         <h5>$2.345,00</h5>
                     </div>
                     <a id="vermas" href="product.html">Ver +</a>
@@ -124,7 +124,7 @@
                 <article>
                     <a href="./product4.html"><img class="index" src="./img/ES-335FiguredCustomColor-DeepOcean Burst.png" alt="ES-335"></a>
                     <div class="home-product">
-                        <h2>ES-335 Figured Custom Color - Deep Ocean Burst</h2>
+                        <h2>ES-335 Figured Custom Color</h2>
                         <h3>Gibson</h3>
                         <h4>ES-335</h4>
                         <p>Cuerpo semihueco de arce/álamo/arce veteado AAA de 3 capas con bloque central de arce macizo, mástil de caoba con perfil C redondeado y diapasón de madera de palo de rosa, pastillas calibradas tipo T y acabados de la serie Custom Color.</p>
@@ -146,7 +146,7 @@
                 <article>
                     <a href="./product.html"><img class="index" src="./img/FlyingVCustomFiguredTop-CobraBurst.png" alt="Flying V"></a>
                     <div class="home-product">
-                        <h2>Flying V Custom Figured Top - Cobra Burst</h2>
+                        <h2>Flying V Custom Figured Top - Cobra</h2>
                         <h3>Gibson</h3>
                         <h4>Flying V</h4>
                         <p>This Gibson Custom Select Flying V™ Custom features a flame maple top and a custom Cobra Burst finish. Guitars from Gibson Custom Select offer unique features that are handpicked by Gibson’s experts. These guitars are based on existing models but have custom finishes.</p>
