responsive img y mapita

--- a/product2.html
+++ b/product2.html
@@ -30,7 +30,7 @@
     <main class="product">
         <section id="seccion-product" >
             <h2 class="modelo">Player II Modified Telecaster® SH</h2>
-            <img clas="productimg" id="foto-product" src="./img/PlayerIIModified Telecaster®SH.png" alt="Stratocastor vintage 60s">
+            <img class="producting" id="foto-product" src="./img/PlayerIIModified Telecaster®SH.png" alt="Stratocastor vintage 60s">
             <article class="titulModelo">
                 <div class="titulModelo">
                     <h3>Fender</h3>
