--- a/product4.html
+++ b/product4.html
@@ -30,7 +30,7 @@
     <main class="product">
         <section id="seccion-product" >
             <h2 class="modelo">ES-335 Figured Custom Color - Deep Ocean Burst</h2>
-            <img clas="productimg" id="foto-product" src="./img/ES-335FiguredCustomColor-DeepOcean Burst.png" alt="Stratocastor vintage 60s">
+            <img class="producting" id="foto-product" src="./img/ES-335FiguredCustomColor-DeepOcean Burst.png" alt="Stratocastor vintage 60s">
             <article class="titulModelo">
                 <div class="titulModelo">
                     <h3>Gibson</h3>
