--- a/product.html
+++ b/product.html
@@ -30,7 +30,7 @@
     <main class="product">
         <section id="seccion-product" >
             <h2 class="modelo">American Ultra Luxe Vintage '60s Stratocaster</h2>
-            <img clas="productimg" id="foto-product" src="./img/strato.sinfondo.png" alt="Stratocastor vintage 60s">
+            <img class="producting" id="foto-product" src="./img/strato.sinfondo.png" alt="Stratocastor vintage 60s">
             <article class="titulModelo">
                 <div class="titulModelo">
                     <h3>Fender</h3>
