--- a/product3.html
+++ b/product3.html
@@ -30,7 +30,7 @@
     <main class="product">
         <section id="seccion-product" >
             <h2 class="modelo">Limited Edition American Professional II Stratocaster® Thinline</h2>
-            <img clas="productimg" id="foto-product" src="./img/LimitedEditionAmericanProfessionalIIStratocaster®Thinline.png" alt="Stratocastor vintage 60s">
+            <img class="producting" id="foto-product" src="./img/LimitedEditionAmericanProfessionalIIStratocaster®Thinline.png" alt="Stratocastor vintage 60s">
             <article class="titulModelo">
                 <div class="titulModelo">
                     <h3>Fender</h3>
