stock - tags y algo mas papa

--- a/product.html
+++ b/product.html
@@ -43,13 +43,19 @@
                     <h2>¡¡Veni a probarla!!</h2>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3286.1875900548607!2d-58.44627502319495!3d-34.54880545460198!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb436efe09303%3A0xfb39818e7624ac76!2sDigital%20House!5e0!3m2!1ses!2sar!4v1758315588162!5m2!1ses!2sar" width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
+                <h3 class="stock">Stock: Poco stock</h3>
                 <div class="comprar">
                     <a href="pasarelapagos.html">COMPRAR</a>
                 </div>
             </article>
             <p class="descripcion">Representing the pinnacle of innovation and craftsmanship, Fender American Ultra Luxe sets the benchmark for premium electric instruments. The new American Ultra Luxe Vintage series takes it a step further, showcasing the finest of Fender heritage – where timeless classics meet uncompromising modern refinement.</p>            
-            <p>10 unidades disponibles</p>
-            <p>Lista de tags?</p>
+                <ol class="tags">
+                    <li>Stratocaster</li>
+                    <li>Fender</li>
+                    <li>Celeste</li>
+                    <li>Diestro</li>
+                  <li>Vintage</li>
+                </ol>
         </section>
         <section id="seccion-product">
             <form action="get">
