--- a/searchresults.html
+++ b/searchresults.html
@@ -14,7 +14,7 @@
         <a href="./index.html">    
             <img id="logonombre" src="img/logonombre.png" alt="logonombre lenga">
         </a>
-        <form id="buscador" action="./searchresults.html" method="get">
+        <form class="buscador" action="./searchresults.html" method="get">
             <label for="search"></label>
             <input id="search" type="text" name="busqueda" placeholder="Busqueda" value="">
         </form>
