--- a/searchresults.html
+++ b/searchresults.html
@@ -41,7 +41,7 @@
             <a id="vermas" href="product.html">Ver +</a>
         </article>
         <article>
-            <a href="./product2.html"><img class="index" src="./img/PlayerIIModified Telecaster®SH.png" alt="Telecaster Negra Violeta mod"></a>
+            <a href="./product.html"><img class="index" src="./img/PlayerIIModified Telecaster®SH.png" alt="Telecaster Negra Violeta mod"></a>
             <div class="home-product">    
                 <h2>Player II Modified Telecaster® SH</h2>
                 <h3>Fender</h3>
@@ -52,7 +52,7 @@
             <a id="vermas" href="product.html">Ver +</a>
         </article>
         <article>
-            <a href="./product3.html"><img class="index" src="./img/LimitedEditionAmericanProfessionalIIStratocaster®Thinline.png" alt="Telecaster Negra Violeta mod"></a>
+            <a href="./product.html"><img class="index" src="./img/LimitedEditionAmericanProfessionalIIStratocaster®Thinline.png" alt="Telecaster Negra Violeta mod"></a>
             <div class="home-product">        
                 <h2>Limited Edition American Professional II Stratocaster® Thinline</h2>
                 <h3>Fender</h3>
