--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
         </div>
         <a href="./register.html">No tengo cuenta</a>
     </form>
-    <footer>
+    <footer id="foot">
         <ul>
             <li>Agustín Oñate</li>
             <li>Marcos Bunge</li>
