--- a/register.html
+++ b/register.html
@@ -36,7 +36,7 @@
             <a href="login.html">Ya tengo una cuenta</a>
         </div>
     </form>
-    <footer>
+    <footer id="foot">
         <ul>
             <li>Agustín Oñate</li>
             <li>Marcos Bunge</li>
