--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <a href="./product2.html"><img class="index" src="./img/PlayerIIModified Telecaster®SH.png"
+                    <a href="./product.html"><img class="index" src="./img/PlayerIIModified Telecaster®SH.png"
                             alt="Telecaster Negra Violeta mod"></a>
                     <div class="home-product">
                         <h2>Player II Modified Telecaster® SH</h2>
@@ -109,7 +109,7 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <a href="./product3.html"><img class="index"
+                    <a href="./product.html"><img class="index"
                             src="./img/LimitedEditionAmericanProfessionalIIStratocaster®Thinline.png"
                             alt="Telecaster Negra Violeta mod"></a>
                     <div class="home-product">
@@ -125,7 +125,7 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <a href="./product4.html"><img class="index"
+                    <a href="./product.html"><img class="index"
                             src="./img/ES-335FiguredCustomColor-DeepOcean Burst.png" alt="ES-335"></a>
                     <div class="home-product">
                         <h2>ES-335 Figured Custom Color</h2>
