--- a/category.html
+++ b/category.html
@@ -120,7 +120,7 @@
             </section>
         </section>
     </main>
-    <footer id="foot">
+    <footer id="foot2">
         <ul>
             <li>Agustín Oñate</li>
             <li>Marcos Bunge</li>
