--- a/searchresults.html
+++ b/searchresults.html
@@ -64,7 +64,7 @@
         </article>
     </section>
     <h3 class="resultados">No hay resultados</h3> 
-    <footer>
+    <footer id="foot2">
         <ul>
             <li>Agustín Oñate</li>
             <li>Marcos Bunge</li>
