--- a/category.html
+++ b/category.html
@@ -30,55 +30,35 @@
     <main>
 
         <aside>
-            <form action="./category.html" method="get">
-                <h2>CATTEGORIAS</h2>
-                <div class="aside">
-                    <label for="cat">Marcas</label>
-                    <select name="Categorias" id="cat">
-                        <option value="todo">-</option>
-                        <option value="fender">Fender</option>
-                        <option value="gibson">Gibson</option>
-                        <option value="prs">PRS</option>
-                    </select>
-                </div>
-                <div class="aside">
-                    <label for="cat">Modelos</label>
-                    <select name="Categorias" id="cat">
-                        <option value="todo">-</option>
-                        <option value="Stratocaster">Stratocaster</option>
-                        <option value="Telecaster">Telecaster</option>
-                        <option value="ES-335">ES-335</option>
-                        <option value="SG">SG</option>
-                        <option value="SG">Flaying V</option>
-                        <option value="SG">Les Paul</option>
-                    </select>
-                </div>
-                <div class="aside">
-                    <label for="color">Colores</label>
-                    <select name="colores" id="color">
-                        <option value="todo">-</option>
-                        <option value="rojo">Rojo</option>
-                        <option value="azul">Azul</option>
-                        <option value="negro">Negro</option>
-                        <option value="verde">verde</option>
-                        <option value="violeta">violeta</option>
-                        <option value="rosa">rosa</option>
-                        <option value="blanco">blanco</option>
-                        <option value="yelowtv">yelow tv</option>
-                        <option value="marron">marron</option>
-                    </select>
-                </div>
-                <div class="aside">
-                    <label for="mano">Zurdo/Diestro</label>
-                    <select name="manos" id="mano">
-                        <option value="todo">-</option>
-                        <option value="zurdo">Zurdo</option>
-                        <option value="diestro">Diestro</option>
-                    </select>
-                </div>
-                <button type="reset">Quitar</button>
-                <button type="submit">Buscar</button>
-            </form>
+            <div class="aside">
+                <h2>CATEGORIAS</h2>
+                <h3>MARCAS</h3>
+                <a href="./product.html">Fender</a>
+                <a href="./product.html">PRS</a>
+                <a href="./product.html">Gibson</a>
+                <a href="./product.html">-</a>
+                <h3>MODELOS</h3>
+                <a href="./product.html">Stratocaster</a>
+                <a href="./product.html">Telecaster</a>
+                <a href="./product.html">Les Paul</a>
+                <a href="./product.html">ES-335</a>
+                <a href="./product.html">SG</a>
+                <a href="./product.html">Flaying</a>
+                <a href="./product.html">Explorer</a>
+                <a href="./product.html">-</a>
+                <h3>COLORES</h3>
+                <a href="./product.html">Rojo</a>
+                <a href="./product.html">Azul</a>
+                <a href="./product.html">Verde</a>
+                <a href="./product.html">Violeta</a>
+                <a href="./product.html">Celeste</a>
+                <a href="./product.html">Rosa</a>
+                <a href="./product.html">Blanco</a>
+                <a href="./product.html">Negro</a>
+                <a href="./product.html">Yellow TV</a>
+                <a href="./product.html">Marron</a>
+                <a href="./product.html">-</a>
+            </div>
         </aside>
         <section class="contenido">
             <section class="art">
