--- a/category.html
+++ b/category.html
@@ -107,5 +107,6 @@
             <li>Victor Biazzin Rubinho</li>
         </ul>
     </footer>
+<script src="./js/index.js"></script>
 </body>
 </html>
