--- a/searchresults.html
+++ b/searchresults.html
@@ -71,5 +71,6 @@
             <li>Victor Biazzin Rubinho</li>
         </ul>
     </footer>
+<script src="./js/index.js"></script>
 </body>
 </html>
