--- a/index.html
+++ b/index.html
@@ -408,6 +408,7 @@
             <li>Victor Biazzin Rubinho</li>
         </ul>
     </footer>
+<script src="./js/index.js"></script>
 </body>
 
 </html>
