--- a/product.html
+++ b/product.html
@@ -98,5 +98,6 @@
             <li>Victor Biazzin Rubinho</li>
         </ul>
     </footer>
+<script src="./js/index.js"></script>
 </body>
 </html>
