--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <li><a href="./register.html">REGISTRARSE</a> </li>
             </ul>
         </nav>
+        <div class="logeado"></div>
     </header>
 
     <main>
