--- a/login.html
+++ b/login.html
@@ -34,6 +34,6 @@
             <li>Victor Biazzin Rubinho</li>
         </ul>
     </footer> 
-<script src="./js/index.js"></script>
+<script src="./js/login.js"></script>
 </body>
 </html>
