--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     personalidad y un sonido inconfundible.</p>
             </div>
             <h2 id="titulo-separacion">TOP 9 PRODUCTOS</h2>
-            <section class="art">
+            <section class="art" id="products">
                 <article>
                     <a href="./product.html"><img class="index" src="./img/strato.sinfondo.png"
                             alt="strato azul vintage"></a>
