--- a/product.html
+++ b/product.html
@@ -27,7 +27,7 @@
             </ul>
         </nav>
     </header>
-    <main class="product">
+    <main class="product" id="product">
         <section id="seccion-product" >
             <h2 class="modelo">American Ultra Luxe Vintage '60s Stratocaster</h2>
             <img class="producting" id="foto-product" src="./img/strato.sinfondo.png" alt="Stratocastor vintage 60s">
