--- a/product.html
+++ b/product.html
@@ -30,7 +30,7 @@
     <main class="product">
         <section id="seccionProduct" >
             <h2 class="modelo">American Ultra Luxe Vintage '60s Stratocaster</h2>
-            <img class="producting" id="foto-product" src="./img/strato.sinfondo.png" alt="Stratocastor vintage 60s">
+            <img class="producting" id="foto-product" src="" alt="Stratocastor vintage 60s">
             <article class="titulModelo">
                 <div class="titulModelo">
                     <h3>Fender</h3>
@@ -54,7 +54,7 @@
                     <li>Fender</li>
                     <li>Celeste</li>
                     <li>Diestro</li>
-                  <li>Vintage</li>
+                    <li>Vintage</li>
                 </ol>
         </section>
         <section id="seccionProduct">
