algunos arreglos de product... hay que seguir arreglando

--- a/product.html
+++ b/product.html
@@ -28,9 +28,11 @@
         </nav>
     </header>
     <main class="product">
-        <section id="seccionProduct" >
+        <section id="seccionProduct">
+            <article>
             <h2 class="modelo">American Ultra Luxe Vintage '60s Stratocaster</h2>
             <img class="producting" id="foto-product" src="" alt="Stratocastor vintage 60s">
+            </article>
             <article class="titulModelo">
                 <div class="titulModelo">
                     <h3>Fender</h3>
@@ -57,37 +59,49 @@
                     <li>Vintage</li>
                 </ol>
         </section>
-        <section id="seccionProduct">
-            <form method="get">
-                <p>Rating</p>
-                <textarea name="review" id=""></textarea>
-                <p>Fecha</p>
-                <input type="date" value="">
-                <p>Nombre del usuario</p>
-                <input type="text" value="">
-            </form>
-            <div class="rating">
-                <h3>Strato-Rating</h3>
-                <label>
-                    <input type="radio" name="rating" class="sistRating">
-                    <span class="stratoRating"></span>
-                </label>
-                <label>
-                    <input type="radio" name="rating" class="sistRating">
-                    <span class="stratoRating"></span>
-                </label>
-                <label>
-                    <input type="radio" name="rating" class="sistRating">
-                    <span class="stratoRating"></span>
-                </label>
-                <label>
-                    <input type="radio" name="rating" class="sistRating">
-                    <span class="stratoRating"></span>
-                </label>
-                <label>
-                    <input type="radio" name="rating" class="sistRating">
-                    <span class="stratoRating"></span>
-                </label>
+        <section class="reviewsGeneral">
+            <article class="enviarRating">
+                <div class="escribirRating">
+                    <form method="get">
+                        <p>Rating</p>
+                        <textarea name="review" id=""></textarea>
+                        <p>Fecha</p>
+                        <input type="date" value="">
+                        <p>Nombre del usuario</p>
+                        <input type="text" value="">
+                    </form>
+                </div>
+                <div class="rating">
+                    <h3>Strato-Rating</h3>
+                    <label>
+                        <input type="radio" name="rating" class="sistRating">
+                        <span class="stratoRating"></span>
+                    </label>
+                    <label>
+                        <input type="radio" name="rating" class="sistRating">
+                        <span class="stratoRating"></span>
+                    </label>
+                    <label>
+                        <input type="radio" name="rating" class="sistRating">
+                        <span class="stratoRating"></span>
+                    </label>
+                    <label>
+                        <input type="radio" name="rating" class="sistRating">
+                        <span class="stratoRating"></span>
+                    </label>
+                    <label>
+                        <input type="radio" name="rating" class="sistRating">
+                        <span class="stratoRating"></span>
+                    </label>
+                </div>
+            </article>
+            <div class="cajaResenasClass">
+                <article id="cajasResenas">
+                    <h3></h3>
+                    <h2></h2>
+                    <p></p>
+                    <h5></h5>
+                </article>
             </div>
         </section>
     </main>
