--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
             <ul class="paginas">
                 <li><a href="./index.html">HOME</a></li>
                 <li><a href="./category.html">CATEGORIAS</a></li>
-                <li><a href="./login.html">LOGIN</a></li>
-                <li><a href="./register.html">REGISTRARSE</a> </li>
+                <div class="chau">
+                    <li><a href="./login.html">LOGIN</a></li>
+                    <li><a href="./register.html">REGISTRARSE</a> </li>
+                </div>
             </ul>
         </nav>
         <div class="logeado"></div>
@@ -106,6 +108,7 @@
             <li>Victor Biazzin Rubinho</li>
         </ul>
     </footer>
+    <script src="./js/saludo.js"></script>
     <script src="./js/index.js"></script>
 </body>
 
