--- a/product.html
+++ b/product.html
@@ -22,10 +22,13 @@
             <ul class="paginas">
                 <li><a href="./index.html">HOME</a></li>
                 <li><a href="./category.html">CATEGORIAS</a></li>
-                <li><a href="./login.html">LOGIN</a></li>
-                <li><a href="./register.html">REGISTRARSE</a> </li>
+                <div class="chau">
+                    <li><a href="./login.html">LOGIN</a></li>
+                    <li><a href="./register.html">REGISTRARSE</a> </li>
+                </div>
             </ul>
         </nav>
+        <div class="logeado"></div>
     </header>
     <main class="product">
         <section id="seccionProduct">
@@ -112,6 +115,7 @@
             <li>Victor Biazzin Rubinho</li>
         </ul>
     </footer>
+    <script src="./js/saludo.js"></script>
     <script src="./js/product.js"></script>
 </body>
 </html>
