--- a/searchresults.html
+++ b/searchresults.html
@@ -22,10 +22,13 @@
             <ul class="paginas">
                 <li><a href="./index.html">HOME</a></li>
                 <li><a href="./category.html">CATEGORIAS</a></li>
-                <li><a href="./login.html">LOGIN</a></li>
-                <li><a href="./register.html">REGISTRARSE</a> </li>
+                <div class="chau">
+                    <li><a href="./login.html">LOGIN</a></li>
+                    <li><a href="./register.html">REGISTRARSE</a> </li>
+                </div>
             </ul>
         </nav>
+        <div class="logeado"></div>
     </header>
     <h2 class="busqueda">Resultados de la busqueda:</h2>
     <section class="art">
@@ -49,6 +52,7 @@
             <li>Victor Biazzin Rubinho</li>
         </ul>
     </footer>
+    <script src="./js/saludo.js"></script>
     <script src="./js/search-results.js"></script>
 </body>
 </html>
