logout saludo login

--- a/login.html
+++ b/login.html
@@ -17,10 +17,12 @@
     </div>
     <form class="register" action="index.html" method="get">
         <div>
-            <input id="email" type="text" name="email" placeholder="Ingrese su email" value="" required>
+            <input id="email" type="text" name="email" placeholder="Ingrese su email" value="">
+            <p id="alert1"></p>
         </div>
         <div>
-            <input id="contrasena" type="password" name="contrasena" placeholder="Ingrese su contraseña" value="" required >
+            <input id="contrasena" type="password" name="contrasena" placeholder="Ingrese su contraseña" value="">
+            <p id="alert2"></p>
         </div> 
         <div>
             <button type="submit">Ingresar</button>
@@ -34,6 +36,7 @@
             <li>Victor Biazzin Rubinho</li>
         </ul>
     </footer> 
+    <script src="./js/login.js"></script>
     <script src="./js/index.js"></script>
 </body>
 </html>
