--- a/searchresults.html
+++ b/searchresults.html
@@ -31,18 +31,9 @@
         <div class="logeado"></div>
     </header>
     <h2 class="busqueda">Resultados de la busqueda:</h2>
-    <section class="art">
-        <article>
-            <a href="./product.html"><img class="index" src="./img/strato.sinfondo.png" alt="strato azul vintage"></a>
-            <div class="home-product">
-                <h2>Stratocaster vintage 60s</h2>
-                <h3>Fender</h3>
-                <h4>Stratocaster</h4>
-                <p>Inspirada en la década dorada del rock, esta Stratocaster captura el auténtico espíritu de los 60. Con pastillas de estilo vintage, mástil en C y tonos brillantes, ofrece un sonido versátil ideal para blues, surf y rock clásico. Su estética retro resalta con un acabado elegante y nostálgico.</p>
-                <h5>$899,99</h5>
-            </div>
-            <a id="vermas" href="product.html">Ver +</a>
-        </article>
+    <section class="search-res">
+        <h2 class="busqueda"></h2>
+        <div class="resultados"></div>
     </section>
     <h3 class="resultados">No hay resultados</h3> 
     <footer id="foot2">
