--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
             <li>Victor Biazzin Rubinho</li>
         </ul>
     </footer>
+    <script src="./js/logout.js"></script>
     <script src="./js/saludo.js"></script>
     <script src="./js/index.js"></script>
 </body>
