--- a/product.html
+++ b/product.html
@@ -62,7 +62,7 @@
                     <li>Vintage</li>
                 </ol>
         </section>
-        <section class="reviewsGeneral">
+        <section class="reviewsGeneral"  id="pruebajs">
             <article class="enviarRating">
                 <div class="escribirRating">
                     <form method="get">
@@ -98,14 +98,14 @@
                     </label>
                 </div>
             </article>
-            <div class="cajaResenasClass">
-                <article id="cajasResenas">
+            <article class="cajaResenasClass">
+                <div id="cajasResenas">
                     <h3></h3>
                     <h2></h2>
                     <p></p>
                     <h5></h5>
-                </article>
-            </div>
+                </div>
+            </article>
         </section>
     </main>
     <footer>
