--- a/searchresults.html
+++ b/searchresults.html
@@ -30,12 +30,10 @@
         </nav>
         <div class="logeado"></div>
     </header>
-    <h2 class="busqueda">Resultados de la busqueda:</h2>
     <section class="search-res">
-        <h2 class="busqueda"></h2>
+        <h2 id="titulo-busqueda"></h2>
         <div class="resultados"></div>
-    </section>
-    <h3 class="resultados">No hay resultados</h3> 
+    </section> 
     <footer id="foot2">
         <ul>
             <li>Agustín Oñate</li>
