--- a/product.html
+++ b/product.html
@@ -115,6 +115,7 @@
             <li>Victor Biazzin Rubinho</li>
         </ul>
     </footer>
+    <script src="./js/logout.js"></script>
     <script src="./js/saludo.js"></script>
     <script src="./js/product.js"></script>
 </body>
