--- a/searchresults.html
+++ b/searchresults.html
@@ -43,6 +43,7 @@
             <li>Victor Biazzin Rubinho</li>
         </ul>
     </footer>
+    <script src="./js/logout.js"></script>
     <script src="./js/saludo.js"></script>
     <script src="./js/search-results.js"></script>
 </body>
