cambios del search

--- a/searchresults.html
+++ b/searchresults.html
@@ -31,7 +31,7 @@
         <div class="logeado"></div>
     </header>
     <section class="search-res">
-        <h2 id="titulo-busqueda"></h2>
+        <h2 id="tituloBusqueda"></h2>
         <div class="resultados"></div>
     </section> 
     <footer id="foot2">
