--- a/searchresults.html
+++ b/searchresults.html
@@ -32,7 +32,11 @@
     </header>
     <section class="search-res">
         <h2 id="tituloBusqueda"></h2>
-        <div class="resultados"></div>
+        <div>
+            <article id="resultados">
+
+            </article>
+        </div>
     </section> 
     <footer id="foot2">
         <ul>
