arreglos del index

--- a/index.html
+++ b/index.html
@@ -55,8 +55,27 @@
                     artesanal y lo auténtico. Más que una tienda, somos un espacio donde descubrir guitarras con
                     personalidad y un sonido inconfundible.</p>
             </div>
-            <h2 id="titulo-separacion">TOP 9 PRODUCTOS</h2>
+            <h2 id="titulo-separacion">RANDOM</h2>
             <section class="art" id="products">
+                <article>
+                    <a href="./product.html"><img class="index" src="./img/strato.sinfondo.png"
+                            alt="strato azul vintage"></a>
+                    <div class="home-product">
+                        <h2>Stratocaster vintage 60s</h2>
+                        <h3>Fender</h3>
+                        <h4>Stratocaster</h4>
+                        <p>Representing the pinnacle of innovation and craftsmanship, Fender American Ultra Luxe sets
+                            the benchmark for premium electric instruments. The new American Ultra Luxe Vintage series
+                            takes it a step further, showcasing the finest of Fender heritage – where timeless classics
+                            meet uncompromising.</p>
+                        <h5>$899,99</h5>
+                    </div>
+                    <a id="vermas" href="product.html">Ver +</a>
+                </article>
+
+            </section>
+            <h2 id="titulo-separacion">TOP 6 RELOJES</h2>
+            <section class="art" id="products2">
                 <article>
                     <a href="./product.html"><img class="index" src="./img/strato.sinfondo.png"
                             alt="strato azul vintage"></a>
