--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
         <aside>
             <div class="aside">
                 <h2>CATEGORIAS</h2>
-                <h3>MARCAS</h3>
-                
+                <div id="categorias">
+                    
+                </div>
             </div>
         </aside>
         <section class="contenido">
@@ -83,6 +84,7 @@
             <li>Victor Biazzin Rubinho</li>
         </ul>
     </footer>
+    <script src="./js/category.js"></script>
     <script src="./js/logout.js"></script>
     <script src="./js/saludo.js"></script>
     <script src="./js/index.js"></script>
