--- a/category.html
+++ b/category.html
@@ -35,7 +35,8 @@
         <aside>
             <div class="aside">
                 <h2>CATEGORIAS</h2>
-                <h3>MARCAS</h3>
+                <div id="categorias">
+                </div>
             </div>
         </aside>
         <section class="contenido">
@@ -52,28 +53,6 @@
                     </div>
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
-                <article>
-                    <a href="./product.html"><img class="index" src="./img/SEHOLLOWBODYSTANDARDPIEZO.png" alt="Les paul junior Yellow tv"></a>
-                    <div class="home-product">
-                        <h2>SE HOLLOWBODY STANDARD PIEZO</h2>
-                        <h3>PRS</h3>
-                        <h4>SE Hollowbody</h4>
-                        <p>La SE Hollowbody Standard Piezo combina calidez acústica y potencia eléctrica en un solo instrumento. Su cuerpo completamente hueco ofrece resonancia rica y natural, mientras el sistema piezo integrado permite sonidos acústicos realistas. Con pastillas humbucker y versatilidad tonal, es perfecta para músicos que buscan elegancia, dinamismo y expresión.</p>
-                        <h5>$999,00</h5>
-                    </div>
-                    <a id="vermas" href="product.html">Ver +</a>
-                </article>
-                <article>
-                    <a href="./product.html"><img class="index" src="./img/S2VELASATIN.png" alt="Les paul junior Yellow tv"></a>
-                    <div class="home-product">
-                        <h2>S2 VELA SATIN</h2>
-                        <h3>PRS</h3>
-                        <h4>S2</h4>
-                        <p>La S2 Vela Satin combina un estilo retro con la modernidad de PRS. Su cuerpo ligero y acabado satinado realzan la resonancia natural. Equipada con una pastilla Starla humbucker y una single-coil Type-D, ofrece tonos versátiles, desde limpios brillantes hasta crujidos clásicos. Una guitarra cómoda, elegante y con gran carácter.</p>
-                        <h5>$1.299,00</h5>
-                    </div>
-                    <a id="vermas" href="product.html">Ver +</a>
-                </article>
                 
             </section>
         </section>
@@ -85,8 +64,8 @@
             <li>Victor Biazzin Rubinho</li>
         </ul>
     </footer>
+    <script src="./js/category.js"></script>
     <script src="./js/logout.js"></script>
     <script src="./js/saludo.js"></script>
-    <script src="./js/index.js"></script>
 </body>
 </html>
